tests/lean/phashmap_inst_coherence.lean.expected.out
phashmap_inst_coherence.lean:12:6-12:56: error: application type mismatch
  PersistentHashMap.find? m
argument
  m
has type
  @PersistentHashMap Nat Nat instBEqNat instHashableNat : Type
but is expected to have type
  @PersistentHashMap Nat Nat instBEqNat natDiffHash : Type
